--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@ acrylic and gouache on sheet music<br>
 Courtesy of Prout-Lara Collection, the artist and Anthony Meier Fine Arts, San Francisco</p>
 </span>    
 </div>
-<
+</div>
+
       
