--- a/_pages/exhibitions/index.html
+++ b/_pages/exhibitions/index.html
@@ -4,6 +4,10 @@ title: Past Exhibitions
 permalink: /exhibitions/
 ---
 
+<div class="jumbotron" style="margin-bottom: 0px; padding-bottom: 0px;">
+
+<h2>Past Exhibitions</h2></div>
+
 {% for show in site.exhibitions reversed %}
 
 <div class="jumbotron" style="margin-bottom: 0px; padding-bottom: 0px;">
